<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo Tilt Ball</string>
    <string name="setuptitletext">Demo Tilt Ball CSE03076</string>
    <string name="paramlabelorderofcontroltext">Order of control</string>
    <string name="paramlabelgaintext">Gain</string>
    <string name="paramlabelpathwidthtext">Path width</string>
    <string name="paramlabelpathtypetext">Path type</string>
    <string name="paramlabellapNum">Number of Laps</string>
    <string name="button01text">OK</string>
    <string name="button03text">Exit</string>

</resources>